--- a/Exercicios/ex022/fundo06.html
+++ b/Exercicios/ex022/fundo06.html
@@ -1,45 +1,169 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
         body {
-            background: black url(imagens/wallpaper002.jpg) center center no-repeat scroll;
-            background-size: cover;
             min-height: 100vh;
+            background-color: gray;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
-        main {
-            background-color: white;
-            max-width: 400px;
-            text-align: justify;
-            margin: 0 auto;
-            padding: 10px;
-            border-radius: 15px;
-            border: 2px solid black;
-            text-indent: 50px;
-        }
-
-        main h1 {
+        header {
+            background: black;
+            font-size: 3em;
             text-align: center;
-            text-indent: 0;
+            padding: 30px 0;
+            color: white;
+        }
+
+        header a {
+            color: white;
+            text-decoration: none;
+        }
+
+        header a:hover {
+            text-decoration: underline;
+        }
+
+        section {
+            font-family: fantasy;
+            line-height: 2em;
+            font-size: 3em;
+            padding: 20px 10px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .normal {
+            background-color: white;
+            padding: 0 20px;
+        }
+
+        #img01 {
+            background-image: url(imagens/background001.jpg);
+            background-position: right top;
+        }
+
+        #img02 {
+            background-image: url(imagens/background002.jpg);
+            background-position: center center;
+        }
+
+        #img02 p {
+            background-color: rgba(0, 0, 0, 0.479);
+            color: white;
+            max-width: 600px;
+            padding: 0 20px;
+            border-radius: 15px;
+        }
+
+        #img01 p {
+            background-color: black;
+            color: white;
+            max-width: 600px;
+            padding: 0 20px;
+            border-radius: 15px;
+        }
+
+        .imagem {
+            background-size: cover;
+            background-attachment: fixed;
         }
     </style>
 </head>
 <body>
-    <main>
-        <h1>teste</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tempore nobis expedita dicta. Accusamus veniam exercitationem maxime ipsam voluptatibus eligendi commodi quas, iste quisquam natus aut provident delectus facere numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia veniam praesentium quam cumque accusamus, eum repellendus officia perspiciatis minus modi aut? Neque maiores cumque aliquid unde error asperiores! Nihil, ipsam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tempore nobis expedita dicta. Accusamus veniam exercitationem maxime ipsam voluptatibus eligendi commodi quas, iste quisquam natus aut provident delectus facere numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia veniam praesentium quam cumque accusamus, eum repellendus officia perspiciatis minus modi aut? Neque maiores cumque aliquid unde error asperiores! Nihil, ipsam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tempore nobis expedita dicta. Accusamus veniam exercitationem maxime ipsam voluptatibus eligendi commodi quas, iste quisquam natus aut provident delectus facere numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia veniam praesentium quam cumque accusamus, eum repellendus officia perspiciatis minus modi aut? Neque maiores cumque aliquid unde error asperiores! Nihil, ipsam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tempore nobis expedita dicta. Accusamus veniam exercitationem maxime ipsam voluptatibus eligendi commodi quas, iste quisquam natus aut provident delectus facere numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia veniam praesentium quam cumque accusamus, eum repellendus officia perspiciatis minus modi aut? Neque maiores cumque aliquid unde error asperiores! Nihil, ipsam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tempore nobis expedita dicta. Accusamus veniam exercitationem maxime ipsam voluptatibus eligendi commodi quas, iste quisquam natus aut provident delectus facere numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia veniam praesentium quam cumque accusamus, eum repellendus officia perspiciatis minus modi aut? Neque maiores cumque aliquid unde error asperiores! Nihil, ipsam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tempore nobis expedita dicta. Accusamus veniam exercitationem maxime ipsam voluptatibus eligendi commodi quas, iste quisquam natus aut provident delectus facere numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia veniam praesentium quam cumque accusamus, eum repellendus officia perspiciatis minus modi aut? Neque maiores cumque aliquid unde error asperiores! Nihil, ipsam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tempore nobis expedita dicta. Accusamus veniam exercitationem maxime ipsam voluptatibus eligendi commodi quas, iste quisquam natus aut provident delectus facere numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia veniam praesentium quam cumque accusamus, eum repellendus officia perspiciatis minus modi aut? Neque maiores cumque aliquid unde error asperiores! Nihil, ipsam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tempore nobis expedita dicta. Accusamus veniam exercitationem maxime ipsam voluptatibus eligendi commodi quas, iste quisquam natus aut provident delectus facere numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia veniam praesentium quam cumque accusamus, eum repellendus officia perspiciatis minus modi aut? Neque maiores cumque aliquid unde error asperiores! Nihil, ipsam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam tempore nobis expedita dicta. Accusamus veniam exercitationem maxime ipsam voluptatibus eligendi commodi quas, iste quisquam natus aut provident delectus facere numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia veniam praesentium quam cumque accusamus, eum repellendus officia perspiciatis minus modi aut? Neque maiores cumque aliquid unde error asperiores! Nihil, ipsam?</p>
-    </main>
+    <header>
+        <h1>Cordel Moderno</h1>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+    </header>
+
+    <section class="normal">
+        <p>
+            Estou ficando cansado <br>
+            Da tal tecnologia <br>
+            Só se fala por e-mail <br>
+            Mensagem curta e fria <br>
+            Twitter e Facebook <br>
+            Antes que eu caduque <br>
+            Vou dizer tudo em poesia.
+        </p>
+    </section>
+
+    <section class="imagem" id="img01">
+        <p>
+            Não é mais como era antes <br>
+            É tudo abreviado <br>
+            "Você" só tem duas letras <br>
+            O "O" e o "E" foi riscado <br>
+            Para declarar o amor <br>
+            Basta botar uma flor <br>
+            E um coração desenhado.
+        </p>
+    </section>
+
+    <section class="normal">
+        <p>
+            Arroba agora não pesa <br>
+            É parte de um endereço <br>
+            Ponto final nem se usa<br>
+            Ou vai até no começo<br>
+            Agora é .com<br>
+            Se o saite é muito bom<br>
+            Ele vale um alto preço.
+        </p>
+
+        <p>
+            Pra piorar a liguagem<br>
+            O emoticom é um risco<br>
+            Tem símbolo para tudo<br>
+            Ponto e vírgula e um asterisco<br>
+            Um beijo significa<br>
+            Pra entender como fica<br>
+            Decifre esse rabisco.
+        </p>
+    </section>
+
+    <section class="imagem" id="img02">
+        <p>
+            Tenho saudade das cartas <br>
+            Escritas com a própria mão <br>
+            Mandava no mês de Junho <br>
+            Só chegava no Verão <br>
+            Mas matava a saudade <br>
+            Era texto de verdade <br>
+            Nas linhas do coração.
+        </p>
+    </section>
+
+    <section class="normal">
+        <p>
+            Agora, escrevo e envio <br>
+            Chegando na mesma hora <br>
+            Mas quando vou prosear <br>
+            A pessoa foi embora <br>
+            Abriu outro aplicativo <br>
+            O mundo ficou cativo <br>
+            Da tecnologia do agora.
+        </p>
+
+        <p>
+            Felizmente, pra orar <br>
+            Não precisa de internet <br>
+            Deus escuta todo mundo <br>
+            Se quiser, faça esse teste <br>
+            Dois pontos são dois joelhos <br>
+            Seus lábios são aparelhos <br>
+            Deixe que Deus interprete.
+        </p>
+    </section>
 </body>
 </html>
